--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
+    "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.14.0",
     "styled-components": "^5.3.11"
   },
