--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.14.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
